crates/search/src/index/snapshots/search__index__vector_table__tests__scan_table_join_for_projection_use_metadata_multiple_pk.snap
---
source: crates/search/src/index/vector_table.rs
expression: "format!(\"{}\", pretty::pretty_format_batches(&col).map_err(|e| e.to_string())?)"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                   |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: my_vectored_table.pk1, my_vectored_table.pk2, my_vectored_table.pk3, my_vectored_table.another_column, my_vectored_table.not_where, my_vectored_table.body_embedding                                                       |
|               |   Limit: skip=0, fetch=5                                                                                                                                                                                                               |
|               |     TableScan: my_vectored_table projection=[another_column, body_embedding, not_where, pk1, pk2, pk3], fetch=5                                                                                                                        |
| physical_plan | ProjectionExec: expr=[pk1@3 as pk1, pk2@4 as pk2, pk3@5 as pk3, another_column@0 as another_column, not_where@2 as not_where, body_embedding@1 as body_embedding]                                                                      |
|               |   CoalescePartitionsExec: fetch=5                                                                                                                                                                                                      |
|               |     HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(pk1@0, pk1@0), (pk2@1, pk2@1), (pk3@2, pk3@2)], projection=[another_column@3, body_embedding@8, not_where@4, pk1@0, pk2@1, pk3@2], fetch=5 |
|               |       GlobalLimitExec: skip=0, fetch=5                                                                                                                                                                                                 |
|               |         BaseTable: projection=["pk1", "pk2", "pk3", "another_column", "not_where"] filter=[] limit=Some(5)                                                                                                                             |
|               |       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                             |
|               |         PretendVectorIndex: projection=["pk1", "pk2", "pk3", "body_embedding"] filter=[] limit=None                                                                                                                                    |
|               |                                                                                                                                                                                                                                        |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
