crates/search/src/index/snapshots/search__index__vector_table__tests__scan_table_multi_index_both.snap
---
source: crates/search/src/index/vector_table.rs
expression: "format!(\"{}\", pretty::pretty_format_batches(&col).map_err(|e| e.to_string())?)"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                 |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: my_vectored_table.pk DESC NULLS FIRST, fetch=5                                                                                                                 |
|               |   Projection: my_vectored_table.pk, my_vectored_table.body_embedding, my_vectored_table.summary_embedding                                                            |
|               |     TableScan: my_vectored_table projection=[body_embedding, pk, summary_embedding]                                                                                  |
| physical_plan | SortPreservingMergeExec: [pk@0 DESC], fetch=5                                                                                                                        |
|               |   ProjectionExec: expr=[pk@1 as pk, body_embedding@0 as body_embedding, summary_embedding@2 as summary_embedding]                                                    |
|               |     SortExec: TopK(fetch=5), expr=[pk@1 DESC], preserve_partitioning=[true]                                                                                          |
|               |       HashJoinExec: mode=Partitioned, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(pk@0, pk@0)], projection=[body_embedding@1, pk@0, summary_embedding@3] |
|               |         HashJoinExec: mode=Partitioned, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(pk@0, pk@0)], projection=[pk@0, body_embedding@2]                    |
|               |           RepartitionExec: partitioning=Hash([pk@0], 3), input_partitions=1                                                                                          |
|               |             BaseTable: projection=["pk"] filter=[] limit=None                                                                                                        |
|               |           RepartitionExec: partitioning=Hash([pk@0], 3), input_partitions=1                                                                                          |
|               |             PretendVectorIndex: projection=["pk", "body_embedding"] filter=[] limit=None                                                                             |
|               |         RepartitionExec: partitioning=Hash([pk@0], 3), input_partitions=1                                                                                            |
|               |           PretendVectorIndex: projection=["pk", "summary_embedding"] filter=[] limit=None                                                                            |
|               |                                                                                                                                                                      |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
