crates/search/src/index/snapshots/search__index__vector_table__tests__scan_table_multi_index_no_join.snap
---
source: crates/search/src/index/vector_table.rs
expression: "format!(\"{}\", pretty::pretty_format_batches(&col).map_err(|e| e.to_string())?)"
---
+---------------+--------------------------------------------------------------------------+
| plan_type     | plan                                                                     |
+---------------+--------------------------------------------------------------------------+
| logical_plan  | Sort: my_vectored_table.pk DESC NULLS FIRST, fetch=5                     |
|               |   Projection: my_vectored_table.pk, my_vectored_table.another_column     |
|               |     TableScan: my_vectored_table projection=[another_column, pk]         |
| physical_plan | SortExec: TopK(fetch=5), expr=[pk@0 DESC], preserve_partitioning=[false] |
|               |   BaseTable: projection=["pk", "another_column"] filter=[] limit=None    |
|               |                                                                          |
+---------------+--------------------------------------------------------------------------+
