crates/search/src/index/snapshots/search__index__vector_table__tests__scan_table_no_join_for_metadata_filter.snap
---
source: crates/search/src/index/vector_table.rs
expression: "format!(\"{}\", pretty::pretty_format_batches(&col).map_err(|e| e.to_string())?)"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: my_vectored_table.pk DESC NULLS FIRST, fetch=5                                                                                                                                                |
|               |   Projection: my_vectored_table.pk, my_vectored_table.body_embedding                                                                                                                                |
|               |     TableScan: my_vectored_table projection=[body_embedding, pk], full_filters=[my_vectored_table.a_number > Int64(0)]                                                                              |
| physical_plan | SortPreservingMergeExec: [pk@0 DESC], fetch=5                                                                                                                                                       |
|               |   ProjectionExec: expr=[pk@1 as pk, body_embedding@0 as body_embedding]                                                                                                                             |
|               |     SortExec: TopK(fetch=5), expr=[pk@1 DESC], preserve_partitioning=[true]                                                                                                                         |
|               |       HashJoinExec: mode=Partitioned, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(pk@0, pk@0)], filter=a_number@0 > 0, projection=[body_embedding@3, pk@0]                              |
|               |         RepartitionExec: partitioning=Hash([pk@0], 3), input_partitions=1                                                                                                                           |
|               |           BaseTable: projection=["pk", "a_number"] filter=[BinaryExpr(BinaryExpr { left: Column(Column { relation: None, name: "a_number" }), op: Gt, right: Literal(Int64(0), None) })] limit=None |
|               |         RepartitionExec: partitioning=Hash([pk@0], 3), input_partitions=1                                                                                                                           |
|               |           PretendVectorIndex: projection=["pk", "body_embedding"] filter=[] limit=None                                                                                                              |
|               |                                                                                                                                                                                                     |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
