crates/search/src/index/snapshots/search__index__vector_table__tests__scan_table_no_join_for_metadata_filter_multiple_pk.snap
---
source: crates/search/src/index/vector_table.rs
expression: "format!(\"{}\", pretty::pretty_format_batches(&col).map_err(|e| e.to_string())?)"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                    |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: my_vectored_table.pk1, my_vectored_table.pk2, my_vectored_table.pk3, my_vectored_table.body_embedding                                                                                                       |
|               |   Limit: skip=0, fetch=5                                                                                                                                                                                                |
|               |     TableScan: my_vectored_table projection=[body_embedding, pk1, pk2, pk3], full_filters=[my_vectored_table.a_number > Int64(0)], fetch=5                                                                              |
| physical_plan | ProjectionExec: expr=[pk1@1 as pk1, pk2@2 as pk2, pk3@3 as pk3, body_embedding@0 as body_embedding]                                                                                                                     |
|               |   CoalescePartitionsExec: fetch=5                                                                                                                                                                                       |
|               |     ProjectionExec: expr=[body_embedding@3 as body_embedding, pk1@0 as pk1, pk2@1 as pk2, pk3@2 as pk3]                                                                                                                 |
|               |       HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(pk1@0, pk1@0), (pk2@1, pk2@1), (pk3@2, pk3@2)], filter=a_number@0 > 0, projection=[pk1@0, pk2@1, pk3@2, body_embedding@7] |
|               |         BaseTable: projection=["pk1", "pk2", "pk3", "a_number"] filter=[BinaryExpr(BinaryExpr { left: Column(Column { relation: None, name: "a_number" }), op: Gt, right: Literal(Int64(0), None) })] limit=Some(5)     |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                            |
|               |           PretendVectorIndex: projection=["pk1", "pk2", "pk3", "body_embedding"] filter=[] limit=None                                                                                                                   |
|               |                                                                                                                                                                                                                         |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
